Adding scala to pom file.